--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
+    "@types/yamljs": "^0.2.31",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
@@ -18,6 +19,8 @@
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "multer": "^1.4.4",
-    "uuid": "^8.3.2"
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2",
+    "yamljs": "^0.3.0"
   }
 }
