--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "multer": "^1.4.4",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "tsyringe": "^4.6.0",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
     "yamljs": "^0.3.0"
   }
